--- a/index.html
+++ b/index.html
@@ -6,26 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Curso Basico de Vue.js | Platzi</title>
   <link rel="stylesheet" href="./styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 <body>
-  <div id="app" v-bind:style="{ background: '#' + color }">
-    <coin-detail
-      v-on:change-color="updateColor"
-      v-bind:coin="btc">
-
-
-      <template v-slot:text>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, aperiam? Non dignissimos nam, voluptatem ducimus eos, pariatur dolor quisquam at asperiores praesentium molestias recusandae cum inventore, omnis consequatur? Voluptate, quo?</p>
-      </template>
-
-      <template v-slot:link>
-        <a href="#">Link!</a>
-      </template>
-    </coin-detail>
-
+  <div id="app">
+    <h1>{{name}}</h1>
+    <img v-bind:src="img" v-bind:alt="name">
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="app.js"></script>
 </body>
