--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" v-bind:style="{ background: '#'+color }">
     <h1 v-bind:class="showPrices? 'red' : 'green'">{{name}}</h1>
     <img v-bind:src="img" v-bind:alt="name" v-on:mouseover="toggleShowPrices" v-on:mouseout="toggleShowPrices">
     <span v-if="changePercent>0">
