--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="app" v-bind:style="{ background: '#'+color }">
     <h1 v-bind:class="showPrices? 'red' : 'green'">{{ title}}</h1>
     <img v-bind:src="img" v-bind:alt="name" v-on:mouseover="toggleShowPrices" v-on:mouseout="toggleShowPrices">
-    <span v-if="changePercent>0">
+    <!-- <span v-if="changePercent>0">
       Mayor a 0
     </span>
     <span v-else-if="changePercent<0">
@@ -21,7 +21,9 @@
     </span>
     <span v-else>
       Es 0
-    </span>
+    </span> -->
+    <input type="number" v-model="value">
+    {{convertedValue}}
     <p v-on:click="toggleShowPrices">
       {{ showPrices ? 'Ocultar' : 'Ver'}} Lista
     </p>
