--- a/Ejercicio Render declarativo y Manipulacion del DOM/index.html
+++ b/Ejercicio Render declarativo y Manipulacion del DOM/index.html
@@ -12,30 +12,36 @@
 <body>
   <div id="app">
     <h1>
-      Mis Cursos de Platzi💚
+      Mis Cursos de Platzi (\/) :)
+    
     </h1>
-      <p>
-        <input type="text" placeholder="Titulo del curso"/>
-      </p>
-      <p>
-        <input type="number" placeholder="Horas"/>
-      </p>
-      <p>
-        <button>Guardar Curso</button>
-      </p>
+    <p>
+      <input type="text" v-model="title" placeholder="Titulo del curso" />
+    </p>
+    <p>
+      <input type="number" v-model="time" placeholder="Horas" />
+    </p>
+    <p>
+      <button v-on:click="addCourse()">Guardar Curso</button>
+    </p>
     </fieldset>
     <div>
       <h3>Lista de Cursos</h3>
-      <p class="red">Aun no has realizado cursos</p>
+      <span v-if="totalTime>0">
+        Llevo <strong>{{ totalTime }}</strong> horas aprendiendo en Platzi.
+        <b>#NuncaParesDeAprender</b>
+      </span>
+      <span v-else>
+        <p class="red">Aun {{ totalTime }} no has realizado cursos, la idea es que nunca pares de aprender >:|</p>
+      </span>
       <div>
         <ol>
-          <!-- Lista de cursos -->
+          <li v-for="(course, i) in courses" :key="'course.title'+i">
+            {{course.title}} - {{course.time}}
+          </li>
         </ol>
-        <hr/>
-        <p>
-          Llevo <strong>{{ totalTime }}</strong> horas aprendiendo en Platzi.
-          <b>#NuncaParesDeAprender 💚</b>
-        </p>
+        <hr />
+
       </div>
     </div>
   </div>
