--- a/Sistema de componentes/index.html
+++ b/Sistema de componentes/index.html
@@ -11,33 +11,8 @@
 
 <body>
   <div id="app" v-bind:style="{ background: '#'+color }">
-    <h1 v-bind:class="showPrices? 'red' : 'green'">{{ title}}</h1>
-    <img v-bind:src="img" v-bind:alt="name" v-on:mouseover="toggleShowPrices" v-on:mouseout="toggleShowPrices">
-    <!-- <span v-if="changePercent>0">
-      Mayor a 0
-    </span>
-    <span v-else-if="changePercent<0">
-      Menor a 0
-    </span>
-    <span v-else>
-      Es 0
-    </span> -->
-    <input type="number" v-model="value">
-    {{convertedValue}}
-    <p v-on:click="toggleShowPrices">
-      {{ showPrices ? 'Ocultar' : 'Ver'}} Lista
-    </p>
-
-    <ul v-show="showPrices">
-      <li
-      class="uppercase"
-      v-bind:class="{orange: p.value==actualPrice, red:p.value < actualPrice, green:p.value>actualPrice}"
-      v-for="(p, i) in pricesWithDays" 
-      :key="p.day">
-        {{i+1}} {{p.day}} - {{p.value}}
-      </li>
-    </ul>
-
+    <coin-detail v-bind:coin="btc">
+    </coin-detail>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="app.js"></script>
